# encounter-manager

./: .eslintignore  .eslintrc  .prettierrc  README.md  TODO.md  package.json  pnpm-lock.yaml  tsconfig.eslint.json  tsconfig.json  vite.config.ts  vite.setup.ts
.github/workflows/: publish.yml  super-linter.yml  test.yml
src/: AddCharacterToEncounter.tsx  App.tsx  BackendTypes.ts  FilenameTypes.ts  bindings.ts  encounterBindings.ts  fileBindings.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src-tauri/src/encounters/: character.rs  commands.rs  encounter.rs  mod.rs
src-tauri/src/encounters/character/: character.rs  commands.rs  mod.rs
src-tauri/src/services/: data.rs  file.rs  file_structure.rs  file_system_connection.rs  file_watcher.rs  mod.rs
src-tauri/src/services/files/: file.rs  file_structure.rs  file_watcher.rs  mod.rs
src/classes/: animations.ts
src/components/: AppHeader.tsx  Attribute.tsx  CharacterInInitative.tsx  CharacterInInitiative.tsx  DisplayEncounter.tsx  EncounterCharacter.styles.ts  EncounterCharacter.tsx  EncounterContext.tsx  FileExperiment.tsx  FileManager.tsx  HpAttribute.tsx  NameAttribute.tsx  SimpleStringAttribute.tsx  UpdateAttribute.tsx  UpdateNumber.tsx  interfaces.ts
src/hooks/: UseAttribute.tsx  watchValueObserver.tsx
src/services/: ActiveCharacter.test.ts  ActiveCharacter.ts  Encounters.test.ts  Encounters.ts  FileCommands.ts  FileManager.test.ts  FileManager.ts  FileManager.tsx  HitPoints.test.ts  HitPoints.ts  InitiativeCharacter.test.ts  InititativeCharacter.test.ts  (+8 more)
(+72 files in other folders)
