[package]
name = "encounter-manager"
version = "0.0.0"
description = "A Tauri App"
authors = ["Justin Hurstwright"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["fs-all", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }

tokio = { version = "1.27", features = ["macros", "time", "sync"] }
notify = { version = "5.1.0", features = ["serde"] }

serde_json = "1.0"
serde_yaml = "0.9.21"

tempdir = "0.3.7"
ulid = "1.0.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
